--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/soneyk0/weather_forecast",
   "name": "weather-vue",
   "private": true,
   "version": "0.0.0",
